2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEvent.m: fix 'for' limit (bug report from Lucas Schnorr)

2007-03-11  Benhur Stein <benhur@inf.ufsm.br>
	* Change makefiles to be compatible with gnustep-make v2

2007-02-27  (1.97) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
	* New release. First RC before 2.0 ;-)

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* put version info

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* change chunk sizes.
	* version 1.97 (first pre 2.0)

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * AggregatingFilter/AggregatingFilter.m: correct wrong enumerator use

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTime/DrawView+Drawing.m: better drawing of incomplete links
          and min/max values

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregatingChunk.m: remove debug messages

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTime/DrawView.m: test for nil window when drawing;
          correct trackingRect setting.

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * General/EntityChunk.h: added missing method declarations
        * PajeSimulator/PajeSimul.h: ditto
        * PajeSimulator/SimulChunk.h: ditto
        * SpaceTimeViewer/STController: abort initialisation if interface
          cannot be loaded

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STController: better initialisation code for when
          more than one interface file is loaded

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * ReductionFilter/BusyArray: add new enumerator
        * ReductionFilter/BusyNode: add new enumerator
        * ReductionFilter/ReduceEntity: add min/maxValue methods
        * ReductionFilter/ReduceEntityType: call new notification limitsChanged
          instead of dataChanged

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * AggregatingFilter/AggregatingChunk: new class